fix bug: backdrop-filter not showing on safari

--- a/src/components/bottom-nav/style.scoped.scss
+++ b/src/components/bottom-nav/style.scoped.scss
@@ -32,6 +32,7 @@
     justify-content: space-around;
 
     backdrop-filter: blur(2rem);
+    -webkit-backdrop-filter: blur(2rem);
 
     margin: 0;
     padding: 0;
